helloworld-gke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld
  labels:
    app: helloworld-ns
