helloworld-gke/deployment.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-gke
  namespace: helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
      namespace: helloworld	
    spec:
      containers:
      - name: hello-app
        # Replace $GCLOUD_PROJECT with your project ID
        image: gcr.io/guptarhl-dev-star-producta/helloworld-gke:latest
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 8080
