helloworld-gke/api-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: hello
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: bookstore
